edition = "2023";

option go_package = "keeper/internal/proto/v1/model";
package keeper.go.grpc.v1.model;

message GetSecretRequest {
  string token = 1;
  string path = 2;
}