edition = "2023";

option go_package = "keeper/internal/proto/v1/model";
package keeper.go.grpc.v1.model;

message ListSecretPathsRequest {
  string token = 1;
}